Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109270

[REG 6.4.1->dev]: Qt does not build without Freetype

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.0
    • 6.5.0 FF, 6.5.0 Beta1
    • GUI: Text handling
    • None
    • Windows
    • a02750d12 (dev)

    Description

      When specifying `-no-freetype` or `-freetype=no` with configure (or `-DINPUT_freetype=no` via cmake), Qt dev (at commit 63d72293b71021a79784b5373cd33ff3682c8836 on the super-repo) finishes configuring, but fails to build on Windows 11 21H2 with VS2022 (17.4), stating:

      [1074/1454] Building CXX object qtbase\src\pl...grationPlugin.dir\qminimalintegration.cpp.obj
      FAILED: qtbase/src/plugins/platforms/minimal/CMakeFiles/QMinimalIntegrationPlugin.dir/qminimalintegration.cpp.obj
      [...]
      C:\dev\Qt\qt6\qtbase\src\plugins\platforms\minimal\qminimalintegration.cpp(13): fatal error C1083: Cannot open include file: 'QtGui/private/qfreetypefontdatabase_p.h': No such file or directory
      

      Specifying `-no-freetype` currently works on Qt 6.4.1, and is permitted according to the documentation.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            semlanik Alexey Edelev
            rytoex Ryan Foster
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes